--- a/pom.xml
+++ b/pom.xml
@@ -65,9 +65,14 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.hibernate</groupId>
+			<groupId>jakarta.persistence</groupId>
+			<artifactId>jakarta.persistence-api</artifactId>
+			<version>3.1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate.orm</groupId>
 			<artifactId>hibernate-core</artifactId>
-			<version>7.0.0.Alpha2</version>
+			<version>6.2.12.Final</version>
 		</dependency>
 
 	</dependencies>
