--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=library_management
+server.port=12345
+
+spring.datasource.url=jdbc:h2:file:./database/Library
+spring.datasource.driverClassName=org.h2.Driver
+
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+
