--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,7 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.format_sql=true
+spring.jpa.use_sql_comments=true
 
 
